# LaConcorde

./: .gitignore  .pre-commit-config.yaml  GUI_IMPLEMENTATION.md  LICENSE  README.md  RECOMMENDATIONS.md  TEMPLATE_BUILDER_NOTES.md  build_exe.py  build_macos_app.py  build_macos_dmg.sh  build_windows_installer.py  laconcorde-gui.bat  laconcorde-gui.command  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: config_example.json  create_sample_data.py  mapping.csv  out.xlsx
examples/data/: source.xlsx  target.xlsx
installer/windows/: laconcorde.iss
src/concordx/: __init__.py  cli.py  config.py  io_excel.py  report.py  transfer.py
src/concordx/matching/: __init__.py  blockers.py  linker.py  scorers.py
src/laconcorde/: __init__.py  cli.py  config.py  io_excel.py  normalize.py  report.py  template_builder.py  transfer.py
src/laconcorde/matching/: __init__.py  blockers.py  linker.py  schema.py  scorers.py
src/laconcorde_gui/: __init__.py  __main__.py  app.py  main_window.py  state.py  theme.py  validation_widgets.py
src/laconcorde_gui/controllers/: __init__.py  pipeline_controller.py  session_controller.py
src/laconcorde_gui/models/: __init__.py  candidates_model.py  dataframe_model.py  results_queue_model.py
src/laconcorde_gui/screens/: __init__.py  export_screen.py  project_screen.py  rules_screen.py  template_builder_screen.py  validation_screen.py
src/laconcorde_gui/workers/: __init__.py  export_worker.py  matching_worker.py  template_builder_worker.py
tests/: test_blockers.py  test_config.py  test_errors.py  test_integration.py  test_io_excel.py  test_linker_basic.py  test_normalize.py  test_report.py  test_scorers.py  test_transfer.py
