[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laconcorde"
version = "0.1.5"
description = "Outil de concordance entre tableurs Excel avec fuzzy matching multi-colonnes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "LaConcorde Contributors"}
]
keywords = ["excel", "concordance", "fuzzy-matching", "data-linking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
    "odfpy>=1.0.0",
]

# Optionnel : formats additionnels (.xls, .ods)
# pip install xlrd  pour .xls (Excel 97-2003)
# pip install odfpy pour .ods (LibreOffice)

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pandas-stubs>=2.0.0",
]
gui = [
    "PySide6>=6.5.0",
]
build = [
    "pyinstaller>=6.0.0",
]
formats = [
    "xlrd>=2.0.0",
    "odfpy>=1.0.0",
]

[project.scripts]
laconcorde = "laconcorde.cli:main"
laconcorde-gui = "laconcorde_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
exclude = ["__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Relaxé pour pandas/openpyxl (types incomplets)
check_untyped_defs = false
